--- a/index.html
+++ b/index.html
@@ -4,14 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title></title>
+    <title>UI Project</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="head">
-      <nav></nav>
-    </header>
+    <section id="container">
+      <header class="head">
+        <nav></nav>
+      </header>
 
-    <script src="project.js"></script>
+      <!-- Put together slideshow elements  -->
+      <main>
+        <div class="slide-wrap">
+          <a href="#slide1">1</a>
+          <a href="#slide2">2</a>
+          <a href="#slide3">3</a>
+          <a href="#slide4">4</a>
+          <a href="#slide5">5</a>
+          <a href="#slide6">6</a>
+          <a href="#slide7">7</a>
+          <a href="#slide8">8</a>
+          <a href="#slide9">9</a>
+          <a href="#slide10">10</a>
+          <a href="#slide11">11</a>
+          <a href="#slide12">12</a>
+          <a href="#slide13">13</a>
+          <a href="#slide14">14</a>
+          <a href="#slide15">15</a>
+          <section class="slideshow">
+            <div class="slide" id="slide1">1</div>
+            <div class="slide" id="slide2">2</div>
+            <div class="slide" id="slide3">3</div>
+            <div class="slide" id="slide4">4</div>
+            <div class="slide" id="slide5">5</div>
+            <div class="slide" id="slide6">6</div>
+            <div class="slide" id="slide7">7</div>
+            <div class="slide" id="slide8">8</div>
+            <div class="slide" id="slide9">9</div>
+            <div class="slide" id="slide10">10</div>
+            <div class="slide" id="slide11">11</div>
+            <div class="slide" id="slide12">12</div>
+            <div class="slide" id="slide13">13</div>
+            <div class="slide" id="slide14">14</div>
+            <div class="slide" id="slide15">15</div>
+          </section>
+        </div>
+      </main>
+    </section>
   </body>
+  <script src="project.js"></script>
 </html>
