added style and more html for slideshow, bug not showing all 15

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section id="container">
       <header class="head">
-        <nav></nav>
+        <h1>My Favorite Marvel Characters</h1>
       </header>
 
       <!-- Put together slideshow elements  -->
@@ -32,21 +32,33 @@
           <a href="#slide14">14</a>
           <a href="#slide15">15</a>
           <section class="slideshow">
-            <div class="slide" id="slide1">1</div>
-            <div class="slide" id="slide2">2</div>
-            <div class="slide" id="slide3">3</div>
-            <div class="slide" id="slide4">4</div>
-            <div class="slide" id="slide5">5</div>
-            <div class="slide" id="slide6">6</div>
-            <div class="slide" id="slide7">7</div>
-            <div class="slide" id="slide8">8</div>
-            <div class="slide" id="slide9">9</div>
-            <div class="slide" id="slide10">10</div>
-            <div class="slide" id="slide11">11</div>
-            <div class="slide" id="slide12">12</div>
-            <div class="slide" id="slide13">13</div>
-            <div class="slide" id="slide14">14</div>
-            <div class="slide" id="slide15">15</div>
+            <div class="slide" id="slide1">
+              <img src="" id="doctor-strange" />1
+            </div>
+            <div class="slide" id="slide2">
+              <img src="" id="silver-surfer" />2
+            </div>
+            <div class="slide" id="slide3"><img src="" id="blade" />3</div>
+            <div class="slide" id="slide4"><img src="" id="spider-man" />4</div>
+            <div class="slide" id="slide5"><img src="" id="wolverine" />5</div>
+            <div class="slide" id="slide6">
+              <img src="" id="black-panther" />6
+            </div>
+            <div class="slide" id="slide7"><img src="" id="deadpool" />7</div>
+            <div class="slide" id="slide8"><img src="" id="magneto" />8</div>
+            <div class="slide" id="slide9"><img src="" id="thor" />9</div>
+            <div class="slide" id="slide10">
+              <img src="" id="human-torch" />10
+            </div>
+            <div class="slide" id="slide11">
+              <img src="" id="scarlet-witch" />11
+            </div>
+            <div class="slide" id="slide12"><img src="" id="domino" />12</div>
+            <div class="slide" id="slide13"><img src="" id="havok" />13</div>
+            <div class="slide" id="slide14"><img src="" id="loki" />14</div>
+            <div class="slide" id="slide15">
+              <img src="" id="nightcrawler" />15
+            </div>
           </section>
         </div>
       </main>
