--- a/index.html
+++ b/index.html
@@ -8,61 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section id="container">
-      <header class="head">
-        <h1>My Favorite Marvel Characters</h1>
-      </header>
-
-      <!-- Put together slideshow elements  -->
-      <main>
-        <div class="slide-wrap">
-          <a href="#slide1">1</a>
-          <a href="#slide2">2</a>
-          <a href="#slide3">3</a>
-          <a href="#slide4">4</a>
-          <a href="#slide5">5</a>
-          <a href="#slide6">6</a>
-          <a href="#slide7">7</a>
-          <a href="#slide8">8</a>
-          <a href="#slide9">9</a>
-          <a href="#slide10">10</a>
-          <a href="#slide11">11</a>
-          <a href="#slide12">12</a>
-          <a href="#slide13">13</a>
-          <a href="#slide14">14</a>
-          <a href="#slide15">15</a>
-          <section class="slideshow">
-            <div class="slide" id="slide1">
-              <img src="" id="doctor-strange" />1
-            </div>
-            <div class="slide" id="slide2">
-              <img src="" id="silver-surfer" />2
-            </div>
-            <div class="slide" id="slide3"><img src="" id="blade" />3</div>
-            <div class="slide" id="slide4"><img src="" id="spider-man" />4</div>
-            <div class="slide" id="slide5"><img src="" id="wolverine" />5</div>
-            <div class="slide" id="slide6">
-              <img src="" id="black-panther" />6
-            </div>
-            <div class="slide" id="slide7"><img src="" id="deadpool" />7</div>
-            <div class="slide" id="slide8"><img src="" id="magneto" />8</div>
-            <div class="slide" id="slide9"><img src="" id="thor" />9</div>
-            <div class="slide" id="slide10">
-              <img src="" id="human-torch" />10
-            </div>
-            <div class="slide" id="slide11">
-              <img src="" id="scarlet-witch" />11
-            </div>
-            <div class="slide" id="slide12"><img src="" id="domino" />12</div>
-            <div class="slide" id="slide13"><img src="" id="havok" />13</div>
-            <div class="slide" id="slide14"><img src="" id="loki" />14</div>
-            <div class="slide" id="slide15">
-              <img src="" id="nightcrawler" />15
-            </div>
-          </section>
-        </div>
-      </main>
-    </section>
+    <div class="slideshow-container">
+      <div class="slideshow-slide">
+        <img src=""
+      </div>
+    </div>
   </body>
   <script src="project.js"></script>
 </html>
