--- a/index.html
+++ b/index.html
@@ -10,9 +10,26 @@
   <body>
     <div class="slideshow-container">
       <div class="slideshow-slide">
-        <img src=""
+        <img src="./images/Doctor Strange.jpg" alt="" />
+        <img src="./images/Silver Surfer.jpg" alt="" />
+        <img src="./images/Black Panther.jpg" alt="" />
+        <img src="./images/Magneto.jpg" alt="" />
+        <img src="./images/Blade.jpeg" alt="" />
+        <img src="./images/Spiderman.jpg" alt="" />
+        <img src="./images/Human Torch.jpg" alt="" />
+        <img src="./images/Nightcrawler.jpg" alt="" />
+        <img src="./images/Deadpool.jpg" alt="" />
+        <img src="./images/Dr. Doom.jpg" alt="" />
+        <img src="./images/Wolverine.jpg" alt="" />
+        <img src="./images/Thor.jpg" alt="" />
+        <img src="./images/Loki.jpg" alt="" />
+        <img src="./images/Scarlet Witch.jpg" alt="" />
+        <img src="./images/Domino.jpg" alt="" />
       </div>
     </div>
+
+    <button>Prev</button>
+    <button>Next</button>
   </body>
   <script src="project.js"></script>
 </html>
