begin defining variables in JS

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <div class="slideshow-container">
       <div class="slideshow-slide">
+        <img src="./images/Domino.jpg" id="lastClone" />
         <img src="./images/Doctor Strange.jpg" alt="" />
         <img src="./images/Silver Surfer.jpg" alt="" />
         <img src="./images/Black Panther.jpg" alt="" />
         <img src="./images/Magneto.jpg" alt="" />
-        <img src="./images/Blade.jpeg" alt="" />
+        <img src="./images/Groot.jpg" alt="" />
         <img src="./images/Spiderman.jpg" alt="" />
         <img src="./images/Human Torch.jpg" alt="" />
         <img src="./images/Nightcrawler.jpg" alt="" />
@@ -25,11 +26,12 @@
         <img src="./images/Loki.jpg" alt="" />
         <img src="./images/Scarlet Witch.jpg" alt="" />
         <img src="./images/Domino.jpg" alt="" />
+        <img src="./images/Doctor Strange.jpg" id="firstClone" />
       </div>
     </div>
 
-    <button>Prev</button>
-    <button>Next</button>
+    <button id="prevButt">Prev</button>
+    <button id="nextButt">Next</button>
   </body>
   <script src="project.js"></script>
 </html>
