fixed slideshow w/ new button features

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>UI Project</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/3937340128.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="slideshow-container">
+      <i class="far fa-caret-square-left" id="prevButt"></i>
+      <i class="far fa-caret-square-right" id="nextButt"></i>
       <div class="slideshow-slide">
         <img src="./images/Domino.jpg" id="lastClone" />
         <img src="./images/Doctor Strange.jpg" alt="" />
@@ -29,9 +35,6 @@
         <img src="./images/Doctor Strange.jpg" id="firstClone" />
       </div>
     </div>
-
-    <button id="prevButt">Prev</button>
-    <button id="nextButt">Next</button>
   </body>
   <script src="project.js"></script>
 </html>
