first intro of api

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <i class="far fa-caret-square-right" id="nextButt"></i>
       <div class="slideshow-slide">
         <img src="./images/Domino.jpg" id="lastClone" />
-        <img src="./images/Doctor Strange.jpg" alt="" />
+        <img src="./images/Doctor Strange.jpg" alt="" id="strange" />
         <img src="./images/Silver Surfer.jpg" alt="" />
         <img src="./images/Black Panther.jpg" alt="" />
         <img src="./images/Magneto.jpg" alt="" />
@@ -35,6 +35,11 @@
         <img src="./images/Doctor Strange.jpg" id="firstClone" />
       </div>
     </div>
+
+    <div id="strangeBio">
+      <p></p>
+    </div>
   </body>
   <script src="project.js"></script>
+  <script src="api.js"></script>
 </html>
