changed from marvel to nba players

--- a/index.html
+++ b/index.html
@@ -16,29 +16,31 @@
       <i class="far fa-caret-square-left" id="prevButt"></i>
       <i class="far fa-caret-square-right" id="nextButt"></i>
       <div class="slideshow-slide">
-        <img src="./images/Domino.jpg" id="lastClone" />
-        <img src="./images/Doctor Strange.jpg" alt="" id="strange" />
-        <img src="./images/Silver Surfer.jpg" alt="" />
-        <img src="./images/Black Panther.jpg" alt="" />
-        <img src="./images/Magneto.jpg" alt="" />
-        <img src="./images/Groot.jpg" alt="" />
-        <img src="./images/Spiderman.jpg" alt="" />
-        <img src="./images/Human Torch.jpg" alt="" />
-        <img src="./images/Nightcrawler.jpg" alt="" />
-        <img src="./images/Deadpool.jpg" alt="" />
-        <img src="./images/Dr. Doom.jpg" alt="" />
-        <img src="./images/Wolverine.jpg" alt="" />
-        <img src="./images/Thor.jpg" alt="" />
-        <img src="./images/Loki.jpg" alt="" />
-        <img src="./images/Scarlet Witch.jpg" alt="" />
-        <img src="./images/Domino.jpg" alt="" />
-        <img src="./images/Doctor Strange.jpg" id="firstClone" />
+        <img src="./images/Pascal Siakam .png" id="lastClone" />
+        <img src="./images/James Harden.png" alt="" id="harden" />
+        <img src="./images/Giannis Antetokounmpo.png" alt="" id="freak" />
+        <img src="./images/Damian Lillard.png" alt="" id="dame" />
+        <img src="./images/Trae Young.png" alt="" id="young" />
+        <img src="./images/Bradley Beal.png" alt="" id="beal" />
+        <img src="./images/Luka Doncic.png" alt="" id="luka" />
+        <img src="./images/Kawhi Leonard.png" alt="" id="kawhi" />
+        <img src="./images/Devin Booker.png" alt="" id="dbook" />
+        <img src="./images/Russell Westbrook.png" alt="" id="russ" />
+        <img src="./images/Anthony Davis.png" alt="" id="ad" />
+        <img src="./images/Lebron James.png" alt="" id="lbj" />
+        <img src="./images/Zach Lavine.png" alt="" id="lavine" />
+        <img src="./images/Brandon Ingram.png" alt="" id="bi" />
+        <img src="./images/Donovan Mitchell.png" alt="" id="mitch" />
+        <img src="./images/Pascal Siakam .png" alt="" id="siakam" />
+        <img src="./images/James Harden.png" id="firstClone" />
       </div>
     </div>
 
-    <div id="strangeBio">
-      <p></p>
-    </div>
+    <section class="playerBios">
+      <div id="hardenBio">
+        <p></p>
+      </div>
+    </section>
   </body>
   <script src="project.js"></script>
   <script src="api.js"></script>
