--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   </head>
   <body>
     <div class="slideshow-container">
-      <i class="far fa-caret-square-left" id="prevButt"></i>
-      <i class="far fa-caret-square-right" id="nextButt"></i>
+      <i class="fas fa-basketball-ball" id="prevButt"></i>
+      <i class="fas fa-basketball-ball" id="nextButt"></i>
+
+      <!-- <i class="far fa-caret-square-left" id="prevButt"></i>
+      <i class="far fa-caret-square-right" id="nextButt"></i> -->
       <div class="slideshow-slide">
         <img src="./images/Pascal Siakam .png" id="lastClone" />
         <img src="./images/James Harden.png" alt="" id="harden" />
