adding event listeners to players

--- a/index.html
+++ b/index.html
@@ -12,18 +12,26 @@
     ></script>
   </head>
   <body>
+    <header>
+      <div class="header">
+        <img src="./images/NBA Logo.png" id="nbalogo" />
+        <div class="title">
+          <h1>2019-2020 NBA Scoring Leaders</h1>
+        </div>
+        <img src="./images/Kobe logo.png" id="kobelogo" />
+      </div>
+    </header>
+
     <div class="slideshow-container">
       <i class="fas fa-basketball-ball" id="prevButt"></i>
       <i class="fas fa-basketball-ball" id="nextButt"></i>
 
-      <!-- <i class="far fa-caret-square-left" id="prevButt"></i>
-      <i class="far fa-caret-square-right" id="nextButt"></i> -->
       <div class="slideshow-slide">
         <img src="./images/Pascal Siakam .png" id="lastClone" />
         <img src="./images/James Harden.png" alt="" id="harden" />
         <img src="./images/Giannis Antetokounmpo.png" alt="" id="freak" />
         <img src="./images/Damian Lillard.png" alt="" id="dame" />
-        <img src="./images/Trae Young.png" alt="" id="young" />
+        <img src="./images/Trae Young.png" alt="" id="trae" />
         <img src="./images/Bradley Beal.png" alt="" id="beal" />
         <img src="./images/Luka Doncic.png" alt="" id="luka" />
         <img src="./images/Kawhi Leonard.png" alt="" id="kawhi" />
@@ -33,7 +41,7 @@
         <img src="./images/Lebron James.png" alt="" id="lbj" />
         <img src="./images/Zach Lavine.png" alt="" id="lavine" />
         <img src="./images/Brandon Ingram.png" alt="" id="bi" />
-        <img src="./images/Donovan Mitchell.png" alt="" id="mitch" />
+        <img src="./images/Donovan Mitchell.png" alt="" id="dmitch" />
         <img src="./images/Pascal Siakam .png" alt="" id="siakam" />
         <img src="./images/James Harden.png" id="firstClone" />
       </div>
@@ -41,6 +49,48 @@
 
     <section class="playerBios">
       <div id="hardenBio">
+        <p></p>
+      </div>
+      <div id="freakBio">
+        <p></p>
+      </div>
+      <div id="dameBio">
+        <p></p>
+      </div>
+      <div id="traeBio">
+        <p></p>
+      </div>
+      <div id="bealBio">
+        <p></p>
+      </div>
+      <div id="lukaBio">
+        <p></p>
+      </div>
+      <div id="kawhiBio">
+        <p></p>
+      </div>
+      <div id="dbookBio">
+        <p></p>
+      </div>
+      <div id="russBio">
+        <p></p>
+      </div>
+      <div id="adBio">
+        <p></p>
+      </div>
+      <div id="lbjBio">
+        <p></p>
+      </div>
+      <div id="lavineBio">
+        <p></p>
+      </div>
+      <div id="biBio">
+        <p></p>
+      </div>
+      <div id="dmitchBio">
+        <p></p>
+      </div>
+      <div id="siakamBio">
         <p></p>
       </div>
     </section>
