fixed header and logos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Orbitron&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/3937340128.js"
@@ -20,11 +24,29 @@
       <div class="header">
         <img src="./images/NBA Logo.png" id="nbalogo" />
         <div class="title">
-          <h1>2019-2020 NBA Scoring Leaders</h1>
+          <h1>2019-2020 Top 15 NBA Scoring Leaders</h1>
         </div>
         <img src="./images/Kobe logo.png" id="kobelogo" />
       </div>
     </header>
+
+    <!-- <section class="links">
+      <a href="#harden">1</a>
+      <a href="#freak">2</a>
+      <a href="#dame">3</a>
+      <a href="#trae">4</a>
+      <a href="#beal">5</a>
+      <a href="#luka">6</a>
+      <a href="#kawhi">7</a>
+      <a href="#dbook">8</a>
+      <a href="#russ">9</a>
+      <a href="#ad">10</a>
+      <a href="#lbj">11</a>
+      <a href="#lavine">12</a>
+      <a href="#bi">13</a>
+      <a href="#dmitch">14</a>
+      <a href="#siakam">15</a>
+    </section> -->
 
     <div class="slideshow-container">
       <i class="fas fa-basketball-ball" id="prevButt"></i>
