adjusted name and bio info for final look

--- a/index.html
+++ b/index.html
@@ -48,6 +48,54 @@
       <a href="#siakam">15</a>
     </section> -->
 
+    <section class="playerNames">
+      <div id="hardenName">
+        <p></p>
+      </div>
+      <div id="freakName">
+        <p></p>
+      </div>
+      <div id="dameName">
+        <p></p>
+      </div>
+      <div id="traeName">
+        <p></p>
+      </div>
+      <div id="bealName">
+        <p></p>
+      </div>
+      <div id="lukaName">
+        <p></p>
+      </div>
+      <div id="kawhiName">
+        <p></p>
+      </div>
+      <div id="dbookName">
+        <p></p>
+      </div>
+      <div id="russName">
+        <p></p>
+      </div>
+      <div id="adName">
+        <p></p>
+      </div>
+      <div id="lbjName">
+        <p></p>
+      </div>
+      <div id="lavineName">
+        <p></p>
+      </div>
+      <div id="biName">
+        <p></p>
+      </div>
+      <div id="dmitchName">
+        <p></p>
+      </div>
+      <div id="siakamName">
+        <p></p>
+      </div>
+    </section>
+
     <div class="slideshow-container">
       <i class="fas fa-basketball-ball" id="prevButt"></i>
       <i class="fas fa-basketball-ball" id="nextButt"></i>
